# brd-prd-generator

./: .env.example  .gitignore  CLAUDE.md  CONTEXT_ENGINEERING_STATUS.md  INITIAL.md  Makefile  fix_config_dict.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
data/documents/brds/: BRD-123456.json  BRD-789432.json
data/documents/history/: GEN-20250930090720.json  GEN-20250930090938.json  GEN-20250930140246.json
data/documents/prds/: PRD-123456.json  PRD-456789.json  PRD-654321.json
data/documents/validations/: VAL-20250930090720.json  VAL-20250930090938.json  (+1 more)
docs/prd/: PRD.md
docs/prompts/: SCOUT-from-PRD.md
docs/prps/: PRP-implement-core-brd-prd-document-generator-with-multi-llm-support-2025-09-29.md  prp_template.md
examples/api/: dependencies.py  llm_factory.py  llm_strategies.py  llm_strategy_base.py
examples/database/: repository_base.py  repository_concrete.py
examples/tests/: test_patterns.py
notes/: api.md  database.md
scripts/: gen-prp.mjs  note-cli.mjs  scout-cli.mjs
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  endpoints.py
src/core/: __init__.py  exceptions.py  generator.py  models.py  multi_llm_generator.py  prompts.py  validator.py
src/llm/: __init__.py  claude_strategy.py  client.py  factory.py  gemini_strategy.py  openai_strategy.py  prompt_templates_concise.py  prompt_templates_verbose_backup.py  response_fixer.py
src/repository/: __init__.py  base.py  cache.py  filesystem.py
static/: index.html
tests/: test_llm_integration.py  test_models.py  test_smoke.py
